Added H2  Short description
added Land of wonders

--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     <link href="style.css" rel="stylesheet" type="text/css" />
   </head>
   <body>
-    <h1> Welcome to the Homepagne Great Kingdom of Colchis </h1> 
+    <h1> Welcome to the Homepagne Great Kingdom of Colchis </h1>
+    <h2> The Kingdom of Colchis a the land of wonders </h2>
    
 
 
