added new text  in the homepage

--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
   </head>
   <body>
     <h1> Welcome to the Homepagne Great Kingdom of Colchis </h1>
-    <h2> The Kingdom of Colchis a the land of wonders </h2>
+    <h2> The Kingdom of Colchis a the land of wonders </h2>7
+    <h2> You will not regret it </h2>7
+    <h2> ENJOY YOUR STAY </h2>7
    
 
 
